--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlconnection" : "Date Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreApp; Integrated Security:true;"
+  }
 }
