Add migration and update database schema.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlconnection" : "Date Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreApp; Integrated Security:true;"
+    "sqlconnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreApp; Integrated Security = true;"
   }
 }
